{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 61,
  "lineage": "65a2b3dc-e965-a17a-1f59-98351d9e1202",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/networkInterfaces/nic-vm",
            "internal_domain_name_suffix": "2kelvmnjrhrevpsyvii0wgwl5b.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/virtualNetworks/vnet-ecotrack/subnets/subnet-mgmt"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "60-45-BD-90-79-DA",
            "name": "nic-vm",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg-ecotrack",
            "tags": {
              "environment": "production"
            },
            "virtual_machine_id": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Compute/virtualMachines/ecotrack-vm"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.mgmt",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/networkSecurityGroups/nsg-app",
            "location": "westeurope",
            "name": "nsg-app",
            "resource_group_name": "rg-ecotrack",
            "security_rule": [],
            "tags": {
              "environment": "production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/networkSecurityGroups/nsg-mgmt",
            "location": "westeurope",
            "name": "nsg-mgmt",
            "resource_group_name": "rg-ecotrack",
            "security_rule": [],
            "tags": {
              "environment": "production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/publicIPAddresses/bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.180.177.39",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "bastion-pip",
            "resource_group_name": "rg-ecotrack",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "production"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "delegation-app-service",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.Web/serverFarms"
                  }
                ]
              }
            ],
            "id": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/virtualNetworks/vnet-ecotrack/subnets/subnet-app",
            "name": "subnet-app",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-ecotrack",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "vnet-ecotrack"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/virtualNetworks/vnet-ecotrack/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-ecotrack",
            "virtual_network_name": "vnet-ecotrack"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/virtualNetworks/vnet-ecotrack/subnets/subnet-mgmt",
            "name": "subnet-mgmt",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-ecotrack",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "vnet-ecotrack"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/virtualNetworks/vnet-ecotrack/subnets/subnet-private-endpoints",
            "name": "subnet-private-endpoints",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": false,
            "resource_group_name": "rg-ecotrack",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "vnet-ecotrack"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "assoc_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/virtualNetworks/vnet-ecotrack/subnets/subnet-app",
            "network_security_group_id": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/networkSecurityGroups/nsg-app",
            "subnet_id": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/virtualNetworks/vnet-ecotrack/subnets/subnet-app"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_app",
            "azurerm_resource_group.rg",
            "azurerm_subnet.app",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "assoc_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/virtualNetworks/vnet-ecotrack/subnets/subnet-mgmt",
            "network_security_group_id": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/networkSecurityGroups/nsg-mgmt",
            "subnet_id": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/virtualNetworks/vnet-ecotrack/subnets/subnet-mgmt"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_mgmt",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mgmt",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b1ba88e2-89a9-4ae2-be58-aa11ab1acbf9",
            "id": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/virtualNetworks/vnet-ecotrack",
            "location": "westeurope",
            "name": "vnet-ecotrack",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "rg-ecotrack",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "delegation-app-service",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/action"
                        ],
                        "name": "Microsoft.Web/serverFarms"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/virtualNetworks/vnet-ecotrack/subnets/subnet-app",
                "name": "subnet-app",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/networkSecurityGroups/nsg-app",
                "service_endpoints": [
                  "Microsoft.Storage"
                ]
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/virtualNetworks/vnet-ecotrack/subnets/subnet-mgmt",
                "name": "subnet-mgmt",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/networkSecurityGroups/nsg-mgmt",
                "service_endpoints": [
                  "Microsoft.Storage"
                ]
              },
              {
                "address_prefixes": [
                  "10.0.3.0/27"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/virtualNetworks/vnet-ecotrack/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.4.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/bed361a3-0183-4e10-b054-c588880a37bd/resourceGroups/rg-ecotrack/providers/Microsoft.Network/virtualNetworks/vnet-ecotrack/subnets/subnet-private-endpoints",
                "name": "subnet-private-endpoints",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": false,
                "service_endpoints": [
                  "Microsoft.Storage"
                ]
              }
            ],
            "tags": {
              "environment": "production"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}